@@ -1,0 +1,7 @@
+// $Id$
+#ifndef ACE_CONFIG_MACOSX_MAVERICKS_H
+#define ACE_CONFIG_MACOSX_MAVERICKS_H
+
+#include "ace/config-macosx-mountainlion.h"
+
+#endif // ACE_CONFIG_MAVERICKS_H
